bugfix: Correct header-image disappearance on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,11 @@ body {
   max-width: 114rem;
   margin: 0 auto; }
 
+h1,
+h2,
+h3 {
+  text-align: center; }
+
 h1 {
   font-size: 7rem; }
 
@@ -56,84 +61,15 @@ main {
 
 ul,
 li {
-  list-style: none; }
+  list-style: none;
+  padding: 0; }
 
 a {
   text-decoration: none;
   color: inherit; }
 
-.header {
-  color: var(--color-white);
-  padding: 12rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-  .header__image-box {
-    width: 20%;
-    height: 20%;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: var(--box-shadow-large);
-    margin-bottom: 2rem; }
-  .header__image {
-    display: block;
-    width: 100%;
-    transform: scale(1.4); }
-  .header__heading {
-    text-shadow: var(--text-shadow); }
-  .header__subheading {
-    color: var(--color-gray-light-2);
-    text-shadow: var(--text-shadow); }
-
-.nav {
-  background-color: var(--color-gray-light-3);
-  color: inherit;
-  font-size: 2.2rem;
-  height: 7rem;
-  width: 100%;
-  border-top-left-radius: var(--border-radius);
-  border-top-right-radius: var(--border-radius);
-  box-shadow: 0 4px 12px 0px rgba(0, 0, 0, 0.2);
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .nav:hover .nav__list {
-    transform: scale(1.05); }
-  .nav__list {
-    width: 80%;
-    display: flex;
-    justify-content: space-around;
-    padding: 0;
-    transition: 0.3s; }
-  .nav__link {
-    padding: 1rem 2rem;
-    background-color: var(--color-white);
-    border-radius: var(--border-radius); }
-
-.aboutme {
-  padding: 10rem 20rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  z-index: 2; }
-  .aboutme__video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    opacity: 0.10;
-    overflow: hidden; }
-    .aboutme__video-content {
-      height: 100%;
-      width: 100%;
-      -o-object-fit: cover;
-      object-fit: cover; }
-  .aboutme .section-header,
-  .aboutme .section-text {
-    z-index: 2; }
+.section-block {
+  padding: 10rem 20rem; }
 
 .section-header {
   font-size: 4.5rem; }
@@ -168,3 +104,114 @@ a {
 
 .aboutme .button--cta {
   z-index: 2; }
+
+.header {
+  color: var(--color-white);
+  padding: 12rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .header__image-box {
+    width: 20%;
+    min-width: 15rem;
+    height: 20%;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: var(--box-shadow-large);
+    margin-bottom: 2rem; }
+  .header__image {
+    display: block;
+    width: 100%;
+    transform: scale(1.4); }
+  .header__heading {
+    text-shadow: var(--text-shadow); }
+  .header__subheading {
+    color: var(--color-gray-light-2);
+    text-shadow: var(--text-shadow); }
+
+.nav {
+  position: sticky;
+  background-color: var(--color-gray-light-3);
+  color: inherit;
+  font-size: 2.2rem;
+  height: 7rem;
+  width: 100%;
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+  box-shadow: 0 4px 12px 0px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .nav:hover .nav__list {
+    transform: scale(1.05); }
+  .nav__list {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    transition: 0.3s; }
+  .nav__link {
+    padding: 1rem 2rem;
+    background-color: var(--color-white);
+    border-radius: var(--border-radius); }
+
+.aboutme {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  z-index: 2; }
+  .aboutme__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    opacity: 0.10;
+    overflow: hidden; }
+    .aboutme__video-content {
+      height: 100%;
+      width: 100%;
+      -o-object-fit: cover;
+      object-fit: cover; }
+  .aboutme .section-header,
+  .aboutme .section-text {
+    z-index: 2; }
+
+.skills.section__block {
+  padding: 10rem; }
+
+.skills {
+  padding: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .skills__tiles-row {
+    margin-top: 1rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr)); }
+  .skills__tile {
+    border: 1px solid var(--color-gray); }
+    .skills__tile-image {
+      display: block;
+      width: 100%;
+      height: 15rem;
+      background-color: var(--color-secondary); }
+    .skills__tile-subheader {
+      margin: 1rem 0;
+      text-align: center; }
+    .skills__tile-list {
+      padding: 0;
+      margin-bottom: 1rem; }
+      .skills__tile-list-item {
+        font-size: 2.2rem;
+        line-height: 1.5;
+        text-align: center; }
+        .skills__tile-list-item-pointer {
+          color: var(--color-primary-light-1);
+          font-size: 1.5rem;
+          vertical-align: middle;
+          margin-right: 1rem; }
+        .skills__tile-list-item-lead {
+          font-size: 1.6rem; }
