--- a/sass/components/_aboutme.scss
+++ b/sass/components/_aboutme.scss
@@ -1,11 +1,4 @@
-// .container {
-//   z-index: -2;
-//   background-color: transparent;
-// }
-
 .aboutme {
-  padding: 10rem 20rem;
-
   display: flex;
   flex-direction: column;
   align-items: center;
