--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,6 +7,7 @@
 
   &__image-box {
     width: 20%;
+    min-width: 15rem;
     height: 20%;
     border-radius: 50%;
     overflow: hidden;
