--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,4 +1,5 @@
 .nav {
+  position: sticky;
   background-color: var(--color-gray-light-3);
   color: inherit;
   font-size: 2.2rem;
